About page mockup and Order page mockup

--- a/app/index.html
+++ b/app/index.html
@@ -25,11 +25,13 @@
 
 <script src="components/angular-complete/angular.js"></script>
 <script src="components/angular-complete/angular-resource.js"></script>
+<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
 
 <!-- build:js scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/services.js"></script>
 <script src="scripts/controllers/dishes.js"></script>
+<script src="scripts/controllers/mockup/about.js"></script>
 <!-- endbuild -->
 
 </body>
