Replaced yeoman+restify by express. Replaced AppFog by Heroku.

--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,8 @@
 
 <div class="container" ng-view></div>
 
-<script src="components/angular-complete/angular.js"></script>
-<script src="components/angular-complete/angular-resource.js"></script>
-<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
+<script src="components/angular/angular.min.js"></script>
+<script src="components/angular-resource/angular-resource.min.js"></script>
 
 <!-- build:js scripts/scripts.js -->
 <script src="scripts/app.js"></script>
